test: 테스트 코드 리팩토링 및 커버리지 향상
- 단위 테스트 및 통합 테스트 개선
- 도메인 서비스 테스트 추가
- 컨트롤러 테스트 보안 필터 분리
- 테스트 설정 및 환경 최적화